--- a/src/app/components/goals-form/goals-form.component.html
+++ b/src/app/components/goals-form/goals-form.component.html
@@ -1,4 +1,4 @@
-<div class="w-full min-h-screen flex items-center justify-center p-4">
+<div class="w-full flex items-start justify-center mt-20">
   <div class="text-center w-full max-w-2xl">
     
     <div class="bg-crater-brown rounded-lg p-8 shadow-2xl">
